--- a/README
+++ b/README
@@ -76,6 +76,8 @@ rove v0.1a:
 		drums.wav on group 1 spanning 1 row, and then piano.wav loaded in twice, both on
 		group two and both spanning one row, but the lower one is playing backwards.
 	
+		after you've created your session file, run rove with "rove <sessionfile.rv>".
+		
 	what do i press?
 		 +-----------+ - - - - - +-----------+-----------+-----------+-----------+
 		 |   group   |  many of  | pattern 1 | pattern 2 |   shift   |    meta   |
