--- a/README
+++ b/README
@@ -68,17 +68,18 @@ rove v0.1a:
 			columns  = 12       # columns to span
 
 			[file]
-			path  = drums.wav   # path to the loop relative to the session file
-			rows  = 2           # number of rows to span across
-			group = 1           # group to which the file is assigned
+			path    = drums.wav # path to the loop relative to the session file
+			rows    = 2         # number of rows to span across
+			group   = 1         # group to which the file is assigned
+			columns = 14        # columns to span (overrides session columns)
 			
 			[file]              # loops are mapped on the monome from top to bottom
-			path  = piano.wav   # in order of where they appear in the session file
-			group = 2
+			path    = piano.wav # in order of where they appear in the session file
+			group   = 2
 			
 			[file]
-			path  = piano.wav   # "path" and "group" are required parameters
-			group = 2           # but "reverse" and "rows" are optional
+			path    = piano.wav # "path" and "group" are required parameters
+			group   = 2         # but "reverse" and "rows" are optional
 			reverse             # and are assumed to be "false" and "1" respectively
 			
 		the row spanning lets you spread a loop out across several rows for added precision.
