--- a/README
+++ b/README
@@ -23,21 +23,23 @@ rove v0.2:
 		installation may prove to be a bit different than what you're used to.
 		
 		regardless of the platform, you'll need:
-			- liblo
+			- libmonome
 			- JACK (http://www.jackaudio.org/)
 			- libsndfile
 			
 		and, optionally:
 			- libsamplerate
 		
-		if you're on linux, you might already have these installed. if not, use
-		your system's package manager to install both the main packages and the
+		the libmonome code is hosted at http://github.com/visinin/libmonome, and you
+		should build a recent git checkout to make sure you have the OSC protocol.
+		
+		if you're on linux, you might already have the latter three installed. if not,
+		use your system's package manager to install both the main packages and the
 		"-dev" packages for them.
 		
-		if you're a mac user, this may be a bit trickier.  you can grab liblo from
-		http://liblo.sf.net/, JACK from	http://jackosx.com/, and libsndfile from
-		http://mega-nerd.com/libsndfile/.  read the README and INSTALL files that
-		come along with those projects.
+		if you're a mac user, this may be a bit trickier.  you can grab JACK from
+		http://jackosx.com/ and libsndfile from http://mega-nerd.com/libsndfile/.
+		read the README and INSTALL files that come along with those projects.
 		
 		you'll need libsamplerate if you want to be able to change the playback speed
 		of loops.  libsamplerate can be downloaded from http://www.mega-nerd.com/SRC/.
